--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: scala
+sudo: false
 scala:
   - 2.10.6
   - 2.11.7
-sudo: false
+jdk:
+  - oraclejdk7
+  - oraclejdk8
 cache:
   directories:
     - $HOME/.ivy2/cache
