--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jdk:
 cache:
   directories:
     - $HOME/.ivy2/cache
+    - $HOME/.coursier
 script: 
   - travis_retry "./travis.sh"
   - find $HOME/.sbt -name "*.lock" | xargs rm
