--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ sudo: false
 scala:
   - 2.11.12
   - 2.12.6
+  - 2.13.0-M4
 jdk:
   - oraclejdk8
+  - oraclejdk9
+  - oraclejdk10
 cache:
   directories:
     - $HOME/.ivy2/cache
