Run tests with Java 9/10 + Scala 2.12 due to the ridiculous behavior of Scala 2.13.0-M4 when running on them

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ scala:
   - 2.13.0-M4
 jdk:
   - oraclejdk8
-  - oraclejdk9
-  - oraclejdk10
+matrix:
+  include:
+  - scala: 2.12.6
+    jdk: oraclejdk9
+  - scala: 2.12.6
+    jdk: oraclejdk10
 cache:
   directories:
     - $HOME/.ivy2/cache
