--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
     jdk: oraclejdk9
   - scala: 2.12.6
     jdk: oraclejdk10
+  - scala: 2.12.7
+    jdk: openjdk11
 cache:
   directories:
     - $HOME/.ivy2/cache
